src/objects/Transaction_Limit__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Debit_Allowed_per_Day__c</fullName>
        <label>Maximum Debit Allowed per Day</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Debit_Allowed_per_Month__c</fullName>
        <label>Maximum Debit Allowed per Month</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Debit_Allowed_per_Transaction__c</fullName>
        <label>Maximum Debit Allowed per Transaction</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Transactions_Allowed_per_Day__c</fullName>
        <label>Maximum Transactions Allowed per Day</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Transactions_Allowed_per_Month__c</fullName>
        <label>Maximum Transactions Allowed per Month</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction Limit</label>
    <nameField>
        <label>Transaction Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>